<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="60dp"
    android:gravity="center"
    android:orientation="horizontal">

    <LinearLayout
        android:layout_width="0dp"
        android:layout_height="match_parent"
        android:layout_weight="1"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/contact_title"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:paddingStart="16dp"
            android:text="@string/example_contact_title"
            android:textSize="20sp" />

        <TextView
            android:id="@+id/contact_phone"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:alpha="0.75"
            android:paddingStart="18dp"
            android:text="@string/example_contact_phone"
            android:textSize="16sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/contact_id"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:alpha="0.5"
        android:paddingEnd="16dp"
        android:text="@string/example_contact_id"
        android:textAlignment="textEnd"
        android:textSize="18sp" />

    <CheckBox
        android:id="@+id/contact_delete_checking"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:clickable="false"
        android:visibility="gone" />

</LinearLayout>